# django-markdownit

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linters.yml
markdown_it/: apps.py
markdownit/: apps.py
markdownit/templatetags/: markdownit.py
