[tool.poetry]
name = "django-markdown-it"
version = "0.4.1"
description = "Markdown template filter for Django following CommonMark specs (markdown-it-py)."
authors = ["Richard <richard@stromer.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "markdownit" }]
repository = "https://github.com/noxan/django-markdown-it"
keywords = ["django", "markdown", "commonmark"]
classifiers = ["Framework :: Django", "Environment :: Web Environment"]

[tool.poetry.dependencies]
python = "^3.12"
markdown-it-py = "^3.0.0"
django = ">=4.0"
nh3 = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.2,<0.5.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
