[tool.poetry]
name = "django-markdownit"
version = "0.4.1"
description = "Markdown template filter for Django following CommonMark specs (markdown-it-py)."
authors = ["Richard <richard@stromer.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "markdownit" }]
repository = "https://github.com/noxan/django-markdownit"
keywords = ["django", "markdown", "commonmark"]
classifiers = ["Framework :: Django", "Environment :: Web Environment"]

[tool.poetry.dependencies]
python = "^3.12"
markdown-it-py = "^3.0.0"
django = ">=4.0"
nh3 = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
