[tool.poetry]
name = "django-markdownit"
version = "0.5.0"
description = "Markdown template filter for Django following CommonMark specs (markdown-it-py)."
authors = ["Richard <richard@stromer.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "markdownit" }]
repository = "https://github.com/noxan/django-markdownit"
keywords = ["django", "markdown", "commonmark"]
classifiers = ["Framework :: Django", "Environment :: Web Environment"]

[tool.poetry.dependencies]
python = "^3.12"
markdown-it-py = ">=3,<5"
django = ">=4.0"
nh3 = ">=0.2.14,<0.4.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.3,<0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
